# Data

./: .gitignore  README.md  consultas ml2.py  consultas.py  ejec.py  init_duckdb.py  prueba.py  pyproject.toml  requirements-ci.txt  tmp_check_dups.py
.github/workflows/: build_baseline_cache.yml  generate_video.yml
config/: settings.template.yaml
docs/: arquitectura.md  ml1_nn_unificado.md
esquema/: app.py
scripts/: ci_collect_code_snapshot.py  ci_preflight.py  ci_snapshot_manifest.py
sql_scripts/consultas/: consultas varias.sql
sql_scripts/migration_tables/: gold.sql  silver.sql
src/: PIPELINE_IO_GRAPH.json  pipeline_unused_scripts_list.txt  run_pipeline.py
src/analisis/: audit_b2_b2a_interaccion_vs_mermas_dim.py  audit_b2_b2a_sku_vs_mermas.py  audit_b2_vs_sku_interaccion_vs_mermas.py  audit_mix_grados_vs_desp.py  audit_ml_pipeline_views.py  build_dataset_analisis_desperdicio.py  build_global_peso_tallo_harvest_day_sp.py  build_pdf_analisis_final_boosting_desp_ridge_ajuste.py  build_pdf_analisis_marginal.py  build_pdf_analisis_marginal_ridge.py  build_pdf_ejecutivo_sistema_ajuste_desperdicio.py  build_pdf_extremos_desperdicio.py  build_pdf_ml1_nn_cycle_report.py  build_pdf_ml1_nn_run_report.py  build_pdf_ml2_nn_cycle_report.py  build_pdf_share_grado_real_hist.py
src/audit/: audit_ajuste_poscosecha_ml2.py  audit_desp_poscosecha_ml2.py  audit_dh_poscosecha_ml2.py  audit_dist_grado_ml1.py  audit_harvest_horizon_ml2.py  audit_harvest_start_ml2.py  audit_harvest_windows_real.py  audit_hidr_poscosecha_ml2.py  audit_mass_balance_pred_oferta_vs_gold.py  (+11 more)
(+326 files in other folders)
