[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planificacion-macro"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyyaml", "pandas", "pyarrow"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ops*"]
